# opencv-edge-detection

./: README.md
app/app/: build.gradle.kts
app/app/src/main/: AndroidManifest.xml
app/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/app/src/main/java/com/example/opencv/: MainActivity.kt
app/app/src/main/res/layout/: activity_main.xml
app/gradle/wrapper/: gradle-wrapper.properties
